--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-3">Track My Application</h1>
+
+    <form method="post" asp-controller="Home" asp-action="Details" class="mt-3">
+        <div class="mb-3">
+            <label for="textBoxInput" class="form-label">Enter Your Applicant Id:</label>
+            <input type="number" class="form-control" id="textBoxInput" name="textBoxInput">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
