intermediate solution with repository working inside background service

--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 @* <td>@applicantMessage.Id</td> *@
                 @* <td>@applicantMessage.ApplicantId</td> *@
-                <td>@applicantMessage.message</td>
+                <td>@applicantMessage.Message</td>
             </tr>
         }
     </tbody>
