--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <form method="post" asp-controller="Home" asp-action="Details" class="mt-3">
         <div class="mb-3">
             <label for="textBoxInput" class="form-label">Enter Your Applicant Id:</label>
-            <input type="number" class="form-control" id="textBoxInput" name="textBoxInput">
+            <input class="form-control" id="textBoxInput" name="textBoxInput">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
