--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 
     <form method="post" asp-controller="Home" asp-action="Details" class="mt-3">
         <div class="mb-3">
-            <label for="textBoxInput" class="form-label">Enter Your Applicant Id:</label>
-            <input class="form-control" id="textBoxInput" name="applicantId">
+            <label for="textBoxInput" class="form-label">Enter Your Email Address:</label>
+            <input class="form-control" id="textBoxInput" name="emailAddress">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
