Passed variables from app-settings.json

--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -15,14 +15,14 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var applicantMessage in Model)
+        @foreach (var applicantMessage in (IEnumerable <ApplicantMessagesModel>)ViewData["messages"])
         {
             <tr>
                 @* <td>@applicantMessage.Id</td> *@
                 @* <td>@applicantMessage.ApplicantId</td> *@
                 <td>@applicantMessage.Message @if(applicantMessage.accountStatus.Equals(AccountStatus.APPROVED))
                     {
-                        <a href="http://localhost:5072/customer/register/@applicantMessage.ApplicantEmailAddress" >Click here to register</a>
+                        <a href='@ViewData["connection"]customer/register/@applicantMessage.ApplicantEmailAddress'>Click here to register</a>
                     }
                 </td>
             </tr>
